Backporting of ArcadeDB to JVM8 from JVM11